--- a/employees.html
+++ b/employees.html
@@ -38,6 +38,7 @@
 						<th data-sort="name">Name</th>
 						<th data-sort="position">Position</th>
 						<th data-sort="salary">Salary</th>
+						<th data-sort="phone">Phone</th>
 						<th colspan="2">Actions</th>
 					</tr>
 				</thead>
