all done except sort

--- a/students.html
+++ b/students.html
@@ -44,6 +44,7 @@
 						<th data-sort="department">Department</th>
 						<th data-sort="level">Level</th>
 						<th data-sort="gpa">GPA</th>
+						<th data-sort="courses">Courses</th>
 						<th colspan="2">Actions</th>
 					</tr>
 				</thead>
@@ -98,6 +99,22 @@
 					<div>
 						<label>GPA</label>
 						<input id="fieldGpa" type="number" step="0.01" min="0" max="4" />
+					</div>
+					<div class="course-selects">
+						<div class="course-field">
+							<label for="fieldCourse1">Course 1</label>
+							<select id="fieldCourse1"></select>
+						</div>
+					
+						<div class="course-field">
+							<label for="fieldCourse2">Course 2</label>
+							<select id="fieldCourse2"></select>
+						</div>
+					
+						<div class="course-field">
+							<label for="fieldCourse3">Course 3</label>
+							<select id="fieldCourse3"></select>
+						</div>
 					</div>
 				</div>
 
